--- a/page2.html
+++ b/page2.html
@@ -55,13 +55,13 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="page1.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
-                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>NGOs</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-s1vj8pCgVF mbr-parallax-background" id="header1-v">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-s1vj8pCgVF mbr-parallax-background" id="header1-v">
 
     
 
