--- a/page1.html
+++ b/page1.html
@@ -54,14 +54,14 @@
                     <a class="nav-link link text-warning display-4" href="https://mobirise.com"><br></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-warning display-4" href="page1.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
-                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page2.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li></ul>
+                    <a class="nav-link link text-warning display-4" href="page3.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Corporations</a>
+                </li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page4.html"><span class="mobi-mbri mobi-mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>SMEs</a></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="page5.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span>Supporters</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s1vhiCq0ke mbr-parallax-background" id="header1-t">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header1 cid-s1vhiCq0ke mbr-parallax-background" id="header1-t">
 
     
 
