create github pages

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(35, 35, 35);"></div>
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
@@ -87,9 +87,8 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>
-                    Responsible 100 helps all businesses to be more responsible, no matter their size, sector or starting point</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">... for their own benefit and for the benefit of everyone else.<br></h3>
+                <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>We help any business - no matter its size, sector or starting point - to be more responsible</strong></h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">... for its own benefit, and for the benefit of everyone else.<br></h3>
                 
             </div>
         </div>
