create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -108,8 +108,8 @@
                         <img src="assets/images/corps-676x344.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Corporations</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">We work with corporations to engage and empower their employees and other stakeholders. We also convene 'critical friend' roundtables and implementation workshops to explore the thorniest issues.</p>
+                        <h4 class="card-title mbr-fonts-style display-5">Corporations</h4>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-primary display-4">
                             Learn More
@@ -123,8 +123,8 @@
                         <img src="assets/images/smes-676x343.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">SMEs</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">We offer SMEs a range of services. In the first instance, that is a no-risk, no-obligation 'fremium' service in order to demonstrate the value we bring; on to bronze, silver or gold service packages therafter.</p>
+                        <h4 class="card-title mbr-fonts-style display-5">SMEs</h4>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page4.html" class="btn btn-primary display-4">
                             Learn More
@@ -138,10 +138,8 @@
                         <img src="assets/images/ngos-676x343.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Supporters</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            We work with NGOs, campaign groups, trade bodies, academics, consultants, government and indeed issue experts from any quarter, to get their issues onto - and up - the business agenda.
-                        </p>
+                        <h4 class="card-title mbr-fonts-style display-5">Supporters</h4>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page5.html" class="btn btn-primary display-4">
                             Learn More
