--- a/page7.html
+++ b/page7.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-s23Qkz7nHT mbr-parallax-background" id="header1-32">
 
     
 
