--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -176,7 +176,7 @@
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">Responsible 100 is at the cutting edge of efforts to&nbsp;<a href="https://twitter.com/search?q=buildbackbetter" target="_blank">#buildbackbetter</a></h3>
+                
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">STAY UP TO DATE...</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
