--- a/page6.html
+++ b/page6.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="header1 cid-s1C1rkdSCq mbr-parallax-background" id="header1-29">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="header1 cid-s1C1rkdSCq mbr-parallax-background" id="header1-29">
 
     
 
