--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header1 cid-s2JKjuNn7U mbr-parallax-background" id="header1-3t">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="header1 cid-s2JKjuNn7U mbr-parallax-background" id="header1-3t">
 
     
 
@@ -276,7 +276,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     About Responsible 100</h5>
-                <p class="mbr-text"><a class="text-primary" href="page8.html">What is Responsible 100?</a><br><a class="text-primary" href="page6.html">Our Purpose</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
+                <p class="mbr-text"><a class="text-primary" href="page8.html">What is Responsible 100?</a><br><a class="text-primary" href="page1.html">How It Works</a><br><a class="text-primary" href="page7.html">Our Strategy</a><br><a class="text-primary" href="page2.html">Shared Aims &amp; Values</a></p>
             </div>
         </div>
         <div class="footer-lower">
